Post fix on alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,41 +31,20 @@ footer a {
 }
 
 .project-thumbnail {
-  height: 250px;
-  width: 170px;
-  margin-right: 20px;
-  margin-top: 10px;
-}
-
-.project-thumbnail-b {
-  height: 120px;
-  width: 380px;
-  margin-right: 20px;
-  margin-top: 10px;
-}
-
-.project-thumbnail-c {
-  height: 90%;
-  width: 70%;
+  max-width: 90%;
+  max-height: 90%;
   margin-right: auto;
   margin-left: auto;
   margin-top: 10px;
 }
 
 .project-thumbnail-d {
-  height: 70%;
-  width: 80%;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 10px;
-}
-
-.project-thumbnail-e {
-  height: 90%;
-  width: 90%;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 .custom-margin {
@@ -111,6 +90,19 @@ footer a {
   font-size: 20px;
 }
 
+.card-img-div {
+  height: 60%;
+}
+
+.card-det-div {
+  height: 30%;
+}
+
+.card-btn-div {
+  padding-left: 16px;
+  height: 10%;
+}
+
 footer {
   position: relative;
   bottom: 0;
@@ -119,6 +111,22 @@ footer {
 }
 
 @media only screen and (max-width: 576px) {
+
+  .card-img-div {
+    height: 40%;
+  }
+  
+  .card-det-div {
+    height: 40%;
+  }
+  
+  .card-btn-div {
+    padding-top:8px;
+    margin-top: 18px;
+    padding-left: 16px;
+    height: 20%;
+  }
+
   .stack {
     display: flex;
     flex-direction: column;
